; ModuleID = '/home/carl/AnghaBench/git/extr_submodule.c_submodule_from_ce.c'
source_filename = "/home/carl/AnghaBench/git/extr_submodule.c_submodule_from_ce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.submodule = type { i32 }
%struct.cache_entry = type { i32, i32 }

@the_repository = common dso_local global i32 0, align 4
@null_oid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.submodule* @submodule_from_ce(%struct.cache_entry* %0) #0 {
  %2 = alloca %struct.submodule*, align 8
  %3 = alloca %struct.cache_entry*, align 8
  store %struct.cache_entry* %0, %struct.cache_entry** %3, align 8
  %4 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  %5 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @S_ISGITLINK(i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store %struct.submodule* null, %struct.submodule** %2, align 8
  br label %20

10:                                               ; preds = %1
  %11 = call i32 (...) @should_update_submodules()
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %10
  store %struct.submodule* null, %struct.submodule** %2, align 8
  br label %20

14:                                               ; preds = %10
  %15 = load i32, i32* @the_repository, align 4
  %16 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  %17 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call %struct.submodule* @submodule_from_path(i32 %15, i32* @null_oid, i32 %18)
  store %struct.submodule* %19, %struct.submodule** %2, align 8
  br label %20

20:                                               ; preds = %14, %13, %9
  %21 = load %struct.submodule*, %struct.submodule** %2, align 8
  ret %struct.submodule* %21
}

declare dso_local i32 @S_ISGITLINK(i32) #1

declare dso_local i32 @should_update_submodules(...) #1

declare dso_local %struct.submodule* @submodule_from_path(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
